src/c/pkcs1/Version.h

/*
 * Generated by asn1c-0.9.23 (http://lionet.info/asn1c)
 * From ASN.1 module "PKCS-1"
 * 	found in "../../../asn.1/pkcs-1v2-1.asn"
 */

#ifndef	_Version_H_
#define	_Version_H_


#include <asn_application.h>

/* Including external dependencies */
#include <INTEGER.h>

#ifdef __cplusplus
extern "C" {
#endif

/* Dependencies */
typedef enum Version {
	Version_two_prime	= 0,
	Version_multi	= 1
} e_Version;

/* Version */
typedef INTEGER_t	 Version_t;

/* Implementation */
extern asn_TYPE_descriptor_t asn_DEF_Version;
asn_struct_free_f Version_free;
asn_struct_print_f Version_print;
asn_constr_check_f Version_constraint;
ber_type_decoder_f Version_decode_ber;
der_type_encoder_f Version_encode_der;
xer_type_decoder_f Version_decode_xer;
xer_type_encoder_f Version_encode_xer;

#ifdef __cplusplus
}
#endif

#endif	/* _Version_H_ */
#include <asn_internal.h>